# synapse

./: .gitignore  README.md  docker-compose.yml  pb_gen.sh  pyproject.toml  requirements.txt
proto/: task.proto
src/synapse/: client.py  config.py  model.py  models.py  rqueue.py  server.py  worker.py
src/synapse/protos/: generate.proto
src/synapse/worker/: base_worker.py  genai_worker.py
